# ai-interview

./: .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  commitlint.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.husky/: pre-commit
apps/ai-server/: .env.example  .gitignore  pyproject.toml
apps/ai-server/app/: main.py
apps/core-api/: .env.example  .gitignore  package.json
apps/core-api/prisma/: dev.db  schema.prisma
apps/core-api/prisma/migrations/20250714023648_init_user_model/: migration.sql
apps/core-api/src/: app.ts  server.ts
apps/core-api/src/plugins/: githubOAuth2.ts  googleOAuth2.ts  jwt.ts  prisma.ts
apps/core-api/src/routes/: ping.ts  root.ts
apps/core-api/src/routes/api/: me.ts
apps/core-api/src/routes/auth/: refresh.ts
apps/core-api/test/: helper.ts
apps/core-api/test/plugins/: support.test.ts
apps/core-api/test/routes/: example.test.ts  root.test.ts
apps/web-client/: next.config.ts  package.json
apps/web-client/src/app/login/: page.tsx
apps/web-client/src/app/login/component/: LoginButton.tsx
